--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "husky": {
     "hooks": {
+      "pre-commit": "pretty-quick --staged && npm run lint",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
@@ -51,9 +52,12 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "prettier": "1.17.0",
+    "pretty-quick": "^1.10.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "~3.2.2"
   }
 }
