--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "e2e": "ng e2e",
     "lint": "ng lint",
     "ng": "ng",
+    "semantic-release": "semantic-release",
     "start": "ng serve",
     "test": "ng test"
   },
@@ -18,6 +19,31 @@
       "pre-commit": "pretty-quick --staged && npm run lint",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "release": {
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/changelog",
+        {
+          "changelogFile": "CHANGELOG.md"
+        }
+      ],
+      "@semantic-release/npm",
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "CHANGELOG.md",
+            "package.json"
+          ],
+          "message": "release: cut the ${nextRelease.version} release [skip ci]\n\n${nextRelease.notes}"
+        }
+      ],
+      "@semantic-release/github"
+    ],
+    "tagFormat": "${version}"
   },
   "dependencies": {
     "@angular/animations": "~7.2.0",
@@ -40,6 +66,8 @@
     "@angular/language-service": "~7.2.0",
     "@commitlint/cli": "^7.5.2",
     "@commitlint/config-angular": "^7.5.0",
+    "@semantic-release/changelog": "^3.0.2",
+    "@semantic-release/git": "^7.0.8",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -55,6 +83,7 @@
     "prettier": "1.17.0",
     "pretty-quick": "^1.10.0",
     "protractor": "~5.4.0",
+    "semantic-release": "^15.13.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "tslint-config-prettier": "^1.18.0",
