--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-junit-reporter": "^1.2.0",
     "prettier": "1.17.0",
     "pretty-quick": "^1.10.0",
     "protractor": "~5.4.0",
