--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "hero-tang-tea",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "build": "ng build",
@@ -53,7 +54,9 @@
     "@angular/forms": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
+    "@angular/pwa": "^0.12.4",
     "@angular/router": "~7.2.0",
+    "@angular/service-worker": "~7.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
@@ -89,6 +92,5 @@
     "tslint": "~5.11.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "~3.2.2"
-  },
-  "version": "0.0.1"
+  }
 }
