--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@commitlint/config-angular": "^7.5.0",
     "@semantic-release/changelog": "^3.0.2",
     "@semantic-release/git": "^7.0.8",
+    "@types/express": "^4.16.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
