--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
     "compile:server": "webpack --config webpack.server.config.js --progress --colors",
     "e2e": "ng e2e",
+    "firebase": "firebase",
     "lint": "ng lint",
     "ng": "ng",
     "semantic-release": "semantic-release",
@@ -80,10 +81,12 @@
     "@commitlint/config-angular": "^7.5.0",
     "@semantic-release/changelog": "^3.0.2",
     "@semantic-release/git": "^7.0.8",
+    "@types/express": "^4.16.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "firebase-tools": "^6.7.1",
     "husky": "^2.1.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
